removed the center feature, since pdf printouts work a lot better this way

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<img src="images/DBE_Logo_RGB-eps-converted-to.png" />
 			</object>
 		</div>
-<section>
+<section class="center">
 					<h3>Multi-dimensional Gated Recurrent Units (MD-GRU) for Semantic Segmentation</h3>
 					<br>
 					<p>Simon Andermatt, Simon Pezold, Philippe Cattin</p>
@@ -897,7 +897,7 @@ $$\tilde{h}^j_t = \phi \left( \sum\limits_i^I (x^i*w^{i,j}) + r^j \odot \sum\lim
 					</div>
 				</section>
 				
-				<section><h4>MrBrains13 WM/GM/CSF <br>Segmentation Challenge (3rd)</h4><div style="100%;vertical-align:middle;">
+				<section><h4>MrBrains13 WM/GM/CSF Segmentation Challenge (3rd)</h4><div style="100%;vertical-align:middle;">
 				<img src="images/mdgru-images.png" style="display:inline-block; border:none; box-shadow: none; width:49%;"/>
 				<div style="float:right;display:inline-block;border:none; box-shadow: none; width:49%; ">
 					<object width="40%" style="display:inline-block; width:auto; padding-top:130px;" type="image/svg+xml" data="images/mdgru-table.svg" id="mdgru-table"><!--fallback--></object></div>
@@ -955,6 +955,7 @@ $$\tilde{h}^j_t = \phi \left( \sum\limits_i^I (x^i*w^{i,j}) + r^j \odot \sum\lim
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				center:false,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
