--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				Goal:
 			   <div style="height:10%;">
 					<img style="border:none; vertical-align:middle; display:inline; width:53%"  src="images/testdata.png">
-					<div style="margin-left:10px; padding:20px; border:5px solid gray;  display:inline;">$F_\theta(I)=S$</div>
+					<div style="margin-left:10px; padding:20px; border:5px solid gray;  display:inline-block; width:20%;">$F_\theta(I)=S$</div>
 					<img style="border:none; vertical-align:middle; display:inline; width:13%" class=""  src="images/test04_01_slice080.png">
 			   </div>
 			   <div style="font-size:50%; padding-top:20px;">(Data from  <a href="https://smart-stats-tools.org/node/26" >Longitudinal Multiple Sclerosis Lesion Segmentation Challenge ISBI 2015</a>)</div>
